--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ThreeJS Journey Excercise</title>
+    <title>ThreeJS Journey Exercise</title>
   </head>
   <body>
     <div id="app">
       <h3>Exercise</h3>
       <ul>
         <li>03. <a href="03-basic-scene/">Basic Scene</a></li>
+        <li>05. <a href="05-transform-objects/">Transform Objects</a></li>
       </ul>
     </div>
   </body>
