--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <ul>
         <li>03. <a href="03-basic-scene/">Basic Scene</a></li>
         <li>05. <a href="05-transform-objects/">Transform Objects</a></li>
+        <li>06. <a href="06-animations/">Animations</a></li>
       </ul>
     </div>
   </body>
