--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li>03. <a href="03-basic-scene/">Basic Scene</a></li>
         <li>05. <a href="05-transform-objects/">Transform Objects</a></li>
         <li>06. <a href="06-animations/">Animations</a></li>
+        <li>07. <a href="07-cameras/">Cameras</a></li>
       </ul>
     </div>
   </body>
